refactor: rework /constellations/ to tidy up code, fix permissions
